Census: Add Spain census data

--- a/src/views/common/table/tableStyles.css
+++ b/src/views/common/table/tableStyles.css
@@ -10,6 +10,12 @@
     border-spacing: 12px 0px;
 }
 
+thead {
+    position: sticky;
+    top: 0;
+    background-color: var(--color-background);
+}
+
 .numeric {
     /* align right for both LTR and RTL views */
     text-align: right;
