CLDR: Improve the CLDR alias import (#87)
While we're getting more usage of the tool I noticed a few problems with
the CLDR data. This starts fixing some of them by fixing how we import
the data on Language Aliases -- the substitute language codes.

Changes
* Updates LanguageData type, adding `cldrDataProvider` optional object
reference when the CLDR data is coming from another language and for the
schemaSpecific imports adds `notes` section -- only used for the CLDR
schema but maybe can be used in other places
* Significant rewrites to `UnicodeData.tsx` when it imports language
aliases.
* Instead of importing a manually generated, we get the CLDR aliases
from the public CLDR json library (we'll use this in other CLDR usages
later)
* Handles `overlong` cases when we map languages to locales (`swc` ->
`sw_CD` for instance) -- not perfectly but better
* Handles `bibliographic` aliases now too (eg. `chi` is an alias for
`zh`)
  * Adds notes for all of these cases, using markup for language codes.
* Move `CLDRCoverageInfo` class into its own file. Added the ability to
pass in notes and render them -- even if there are multiple notes picked
up in recursion. Distinguishes informative from warning notes.

Not in scope for this change (because this PR got big enough)
* Show locale CLDR coverage (since swc is technically supported by
`sw_CD` not `sw`)

See some of the new tooltips
<img width="531" alt="Screenshot 2025-06-24 at 09 28 31"
src="https://github.com/user-attachments/assets/05620591-7470-405f-bf7e-c8125b91e4a7"
/>
<img width="431" alt="Screenshot 2025-06-24 at 09 28 14"
src="https://github.com/user-attachments/assets/ea997f27-4fdf-48e9-ab08-bbc4d6abd10c"
/>



See changes visible in the CLDR support rows, here seen in the table
view.
|What|Notable Changes|Before|After|
|--|--|--|--|
|[Swahili languages in table
view](https://translation-commons.github.io/lang-nav/?view=Table&languageSchema=Inclusive&objectType=Language&searchString=swahili&sortBy=Population&searchB

--- a/src/index.css
+++ b/src/index.css
@@ -102,6 +102,12 @@ footer {
   margin-top: 2em;
 }
 
+code {
+  background-color: var(--color-button-secondary);
+  border-radius: .25em;
+  padding: 0.25em;
+}
+
 @media (prefers-color-scheme: dark) {
   :root {
     --color-text: #f1f1f1;
