--- a/src/views/styles.css
+++ b/src/views/styles.css
@@ -76,12 +76,8 @@ a:hover {
 
 .LinkButton {
     margin-left: 1em;
+    margin-bottom: 0.5em;
     padding: 4px;
-}
-
-.LinkButton::after {
-    content: '↗';
-    margin-left: 4px;
 }
 
 .compact button, .compact input, .compact label, button.compact {
