--- a/src/views/styles.css
+++ b/src/views/styles.css
@@ -122,7 +122,7 @@ dt {
   text-align: start;
 }
 
-.ViewReports summary {
+.collapsible-report > summary {
   width: 100%;
   background-color: var(--color-button-secondary);
   padding: 0.5em;
