--- a/src/controls/controls.css
+++ b/src/controls/controls.css
@@ -1,236 +1,238 @@
 .NavBar {
-    align-items: center;
-    display: flex;
-    flex-wrap: wrap;
-    margin-top: 0em;
-    border-bottom: 0.125em solid var(--color-button-primary) ;
-    margin-bottom: 0.5em;
-    width: 100%;
-    row-gap: 0.5em;
-    color: var(--color-background) ;
-    background-color: var(--color-button-primary) ;
+  align-items: center;
+  display: flex;
+  flex-wrap: wrap;
+  margin-top: 0em;
+  border-bottom: 0.125em solid var(--color-button-primary);
+  margin-bottom: 0.5em;
+  width: 100%;
+  row-gap: 0.5em;
+  color: var(--color-background);
+  background-color: var(--color-button-primary);
 }
 
 .NavBar h1 {
-    font-size: 1.5em;
-    white-space: nowrap;
-    line-height: 1.5;
+  font-size: 1.5em;
+  white-space: nowrap;
+  line-height: 1.5;
 }
 
 .NavBar h1 a {
-    font-weight: lighter;
+  font-weight: lighter;
 }
 
 .NavBar .selector {
-    font-size: 1.2em;
-    line-height: 1.2em;
-    align-content: center;
+  font-size: 1.2em;
+  line-height: 1.2em;
+  align-content: center;
 }
 
 .NavBar .selector,
 .NavBar h1 {
-    margin: 0em 0.5em 0em 0.5em;
+  margin: 0em 0.5em 0em 0.5em;
 }
 
 .Options {
-    margin: 0 1em;
-    display: flex;
-    flex-wrap: wrap;
+  margin: 0 1em;
+  display: flex;
+  flex-wrap: wrap;
 }
 
-.selector.tabs button, .selector.tabs input, .selector.tabs label {
-    border: none;
-    padding: 0.5em .75em;
-} 
+.selector.tabs button,
+.selector.tabs input,
+.selector.tabs label {
+  border: none;
+  padding: 0.5em 0.75em;
+}
 
-.selector.tabs label{
-    color: var(--color-background);
+.selector.tabs label {
+  color: var(--color-background);
 }
 
 .tabs .selected {
-    font-weight: 900;
+  font-weight: 900;
 }
 
 .tabs .notselected {
-    font-weight: 200;
-    color: var(--color-button-secondary) ;
-    background-color: transparent;
+  font-weight: 200;
+  color: var(--color-button-secondary);
+  background-color: transparent;
 }
 
 .selector {
-    margin-left: 0.125em;
-    margin-right: 0.5em;
-    display: flex;
-    align-items: end;
-    margin-bottom: 0.5em;
+  margin-left: 0.125em;
+  margin-right: 0.5em;
+  display: flex;
+  align-items: end;
+  margin-bottom: 0.5em;
 }
 
 .selector button,
 .selector input,
 .selector label {
-    border: 0.125em solid var(--color-button-primary);
-    margin-left: -0.125em;
-    margin-right: -0.125em;
-    line-height: 1em;
-    padding: .5em .5em;
-    white-space: nowrap;
+  border: 0.125em solid var(--color-button-primary);
+  margin-left: -0.125em;
+  margin-right: -0.125em;
+  line-height: 1em;
+  padding: 0.5em 0.5em;
+  white-space: nowrap;
 }
 
 .selector input {
-    color: var(--color-background);
-    background: var(--color-button-primary);
-    padding: 0.375rem;
-    line-height: 1.5em;
-    border-width: 0.15em;
+  color: var(--color-background);
+  background: var(--color-button-primary);
+  padding: 0.375rem;
+  line-height: 1.5em;
+  border-width: 0.15em;
 }
 
 .selector button {
-    color: var(--color-button-primary);
-    background: var(--color-background);
-    cursor: pointer;
-    border-radius: 0px;
-    /* radius comes from more specific changes */
-    line-height: 1em;
+  color: var(--color-button-primary);
+  background: var(--color-background);
+  cursor: pointer;
+  border-radius: 0px;
+  /* radius comes from more specific changes */
+  line-height: 1em;
 }
 
 .selector input.empty {
-    color: var(--color-button-primary);
-    background: var(--color-background);
+  color: var(--color-button-primary);
+  background: var(--color-background);
 }
 
 .selector input::placeholder {
-    color: var(--color-text-secondary);
-    background: var(--color-background);
+  color: var(--color-text-secondary);
+  background: var(--color-background);
 }
 
 .selector button:hover {
-    color: var(--color-background);
-    background: var(--color-button-hover);
+  color: var(--color-background);
+  background: var(--color-button-hover);
 }
 
 .selector :focus {
-    border-color: var(--color-button-hover);
-    background: var(--color-button-hover);
+  border-color: var(--color-button-hover);
+  background: var(--color-button-hover);
 }
 
-.selector.rounded button:first-child, .selector.rounded label:first-child {
-    border-bottom-left-radius: 2em;
-    border-top-left-radius: 2em;
+.selector.rounded button:first-child,
+.selector.rounded label:first-child {
+  border-bottom-left-radius: 2em;
+  border-top-left-radius: 2em;
 }
 
 .selector.rounded button:last-child,
 .selector.rounded button.LastChild {
-    border-bottom-right-radius: 2em;
-    border-top-right-radius: 2em;
+  border-bottom-right-radius: 2em;
+  border-top-right-radius: 2em;
 }
 
 .selector .selected {
-    background: var(--color-button-primary);
-    color: var(--color-background);
+  background: var(--color-button-primary);
+  color: var(--color-background);
 }
 
 .selector label {
-    background: var(--color-button-background);
-    color: var(--color-text);
+  background: var(--color-button-background);
+  color: var(--color-text);
 }
 
 .NoLeftBorder {
-    border-top-left-radius: 0px;
-    border-bottom-left-radius: 0px;
-    border-left: none !important;
+  border-top-left-radius: 0px;
+  border-bottom-left-radius: 0px;
+  border-left: none !important;
 }
 
 .selector button:disabled,
 .selector button:disabled:hover {
-    color: var(--color-text-secondary);
-    pointer-events: none;
+  color: var(--color-text-secondary);
+  pointer-events: none;
 }
 
 .SelectorPopupAnchor {
-    position: relative;
+  position: relative;
 }
 
 .SelectorPopup {
-    background: var(--color-background);
-    border: 0.125em solid var(--color-button-primary);
-    align-items: end;
-    position: absolute;
-    display: flex;
-    right: 0px;
-    flex-direction: column;
-    width: fit-content;
-    z-index: 100;
+  background: var(--color-background);
+  border: 0.125em solid var(--color-button-primary);
+  align-items: end;
+  position: absolute;
+  display: flex;
+  right: 0px;
+  flex-direction: column;
+  width: fit-content;
+  z-index: 100;
 }
 
 .rounded .SelectorPopup {
-    border-radius: 1.15em !important;
+  border-radius: 1.15em !important;
 }
 .tabs .SelectorPopup {
-    border-radius: 0em 0em .6em .6em;
+  border-radius: 0em 0em 0.6em 0.6em;
 }
 
 .SelectorPopup button {
-    border: none;
-    border-radius: 0px;
-    width: 100%;
-    line-height: 1;
-    font-size: 1em;
-    text-align: end;
-    margin: 0px;
+  border: none;
+  border-radius: 0px;
+  width: 100%;
+  line-height: 1;
+  font-size: 1em;
+  text-align: end;
+  margin: 0px;
 }
 
-
 .rounded .SelectorPopup button:first-child {
-    border-radius: 1em 1em 0em 0em;
+  border-radius: 1em 1em 0em 0em;
 }
 
 .rounded .SelectorPopup button:last-child {
-    border-radius: 0em 0em 1em 1em;
+  border-radius: 0em 0em 1em 1em;
 }
 
 .rounded .SelectorPopup button:first-child:last-child {
-    border-radius: 1em 1em 1em 1em;
+  border-radius: 1em 1em 1em 1em;
 }
 
 .tabs .SelectorPopup button:last-child {
-    border-radius: 0em 0em .5em .5em;
+  border-radius: 0em 0em 0.5em 0.5em;
 }
 
 .tabs .SelectorPopup button.notselected {
-    color: var(--color-button-primary)
+  color: var(--color-button-primary);
 }
 
 .SuggestionRowWithMultipleInteractions {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
 }
 
 .selector .SelectorPopup .SuggestionRowWithMultipleInteractions div:first-child {
-    white-space: nowrap;
-    max-width: 12em;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    padding-left: 1em;
+  white-space: nowrap;
+  max-width: 12em;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  padding-left: 1em;
 }
 
 .selector .SelectorPopup .SuggestionRowWithMultipleInteractions button {
-    width: fit-content;
-    border-radius: 0px;
+  width: fit-content;
+  border-radius: 0px;
 }
 
 .selector .SelectorPopup .SuggestionRowWithMultipleInteractions:first-child > :first-child {
-    border-top-left-radius: 1em;
+  border-top-left-radius: 1em;
 }
 
 .selector .SelectorPopup .SuggestionRowWithMultipleInteractions:last-child > :first-child {
-    border-bottom-left-radius: 1em;
+  border-bottom-left-radius: 1em;
 }
 
 .selector .SelectorPopup .SuggestionRowWithMultipleInteractions:first-child > :last-child {
-    border-top-right-radius: 1em;
+  border-top-right-radius: 1em;
 }
 
 .selector .SelectorPopup .SuggestionRowWithMultipleInteractions:last-child > :last-child {
-    border-bottom-right-radius: 1em;
+  border-bottom-right-radius: 1em;
 }
