--- a/src/views/common/TreeList/treelist.css
+++ b/src/views/common/TreeList/treelist.css
@@ -1,79 +1,78 @@
 .TreeListView {
-    text-align: start;
-    max-width: 600px;
-    margin: 0px auto;
+  text-align: start;
+  max-width: 600px;
+  margin: 0px auto;
 }
 
 ul.TreeListRoot,
 ul.TreeListBranch {
-    list-style: none;
-    margin: 0;
-    position: relative;
-    padding-left: 8px;
+  list-style: none;
+  margin: 0;
+  position: relative;
+  padding-left: 8px;
 }
 
 ul.TreeListBranch {
-    margin-left: 16px;
+  margin-left: 16px;
 }
 
 ul.TreeListBranch::before {
-    content: '';
-    position: absolute;
-    bottom: 10px;
-    left: 0;
-    border-left: 2px solid var(--color-button-border);
-    height: 100%;
-    z-index: -1;
+  content: '';
+  position: absolute;
+  bottom: 10px;
+  left: 0;
+  border-left: 2px solid var(--color-button-border);
+  height: 100%;
+  z-index: -1;
 }
 
 .TreeListRoot li {
-    position: relative;
-    background-color: var(--color-background);
-    z-index: 10;
+  position: relative;
+  background-color: var(--color-background);
+  z-index: 10;
 }
 
 .TreeListBranch li::before {
-    content: '';
-    position: absolute;
-    top: 0.75em;
-    left: -8px;
-    width: 20px;
-    border-top: 2px solid var(--color-button-border);
-    background: transparent;
-    z-index: -1;
+  content: '';
+  position: absolute;
+  top: 0.75em;
+  left: -8px;
+  width: 20px;
+  border-top: 2px solid var(--color-button-border);
+  background: transparent;
+  z-index: -1;
 }
 
 .TreeListExpandBranch,
 .TreeListSeeAllDescendents {
-    display: inline-block;
-    margin: 0;
-    margin-right: 4px;
-    padding: 0 10px;
-    z-index: 10;
+  display: inline-block;
+  margin: 0;
+  margin-right: 4px;
+  padding: 0 10px;
+  z-index: 10;
 }
 
-
 .TreeListExpandBranch {
-    background-color: var(--color-button-primary);
-    color: var(--color-background);
+  background-color: var(--color-button-primary);
+  color: var(--color-background);
 }
 
 .TreeListExpandBranch.empty {
-    width: 1em;
+  width: 1em;
 }
 
 .TreeListExpandBranch:hover {
-    background-color: var(--color-button-hover);
+  background-color: var(--color-button-hover);
 }
 
 .TreeListPopulation {
-    display: inline-block;
-    position: absolute;
-    right: 0;
+  display: inline-block;
+  position: absolute;
+  right: 0;
 }
 
 .TreeListOptions {
-    margin-top: 1em;
-    display: flex;
-    gap: .5em
+  margin-top: 1em;
+  display: flex;
+  gap: 0.5em;
 }
