--- a/src/views/modal.css
+++ b/src/views/modal.css
@@ -1,57 +1,57 @@
 .ModalOverlay {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: rgba(0, 0, 0, 0.4); /* dim background */
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.4); /* dim background */
 
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    z-index: 1000;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 1000;
 }
 
 .Modal {
-    margin: 0px auto;
-    background-color: var(--color-background);
-    border-radius: 10px;
-    box-shadow: var(--color-shadow) 0 0 2em 1em;
-    max-height: 100%;
+  margin: 0px auto;
+  background-color: var(--color-background);
+  border-radius: 10px;
+  box-shadow: var(--color-shadow) 0 0 2em 1em;
+  max-height: 100%;
 }
 
 .ModalHeader {
-    display: flex;
-    justify-content: space-between;
-    padding: 4px;
-    background: var(--color-button-primary);
-    border-radius: 10px 10px 0px 0px;
+  display: flex;
+  justify-content: space-between;
+  padding: 4px;
+  background: var(--color-button-primary);
+  border-radius: 10px 10px 0px 0px;
 }
 
 .ModalTitle {
-    color: var(--color-background);
-    margin-left: 20px;
-    margin-right: 8px;
-    font-size: 1.75em;
-    text-align: left;
+  color: var(--color-background);
+  margin-left: 20px;
+  margin-right: 8px;
+  font-size: 1.75em;
+  text-align: left;
 }
 
 .ModalTitle .subtitle {
-    color: var(--color-button-secondary)
+  color: var(--color-button-secondary);
 }
 
 .ModalBody {
-    overflow: scroll;
-    padding: 0 2em 0 2em;
-    max-height: 800px;
-    max-width: 600px;
+  overflow: scroll;
+  padding: 0 2em 0 2em;
+  max-height: 800px;
+  max-width: 600px;
 }
 
 .ModalButtons {
-    display: flex;
-    gap: 8px;
+  display: flex;
+  gap: 8px;
 }
 
 .ModalBody .Details {
-    margin-top: 1em;
+  margin-top: 1em;
 }
