--- a/src/views/styles.css
+++ b/src/views/styles.css
@@ -1,154 +1,158 @@
 .CardList {
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(0, 1fr));
-    grid-gap: 25px;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(0, 1fr));
+  grid-gap: 25px;
 }
 
 .CardListDescription {
-    margin-bottom: 1em;
+  margin-bottom: 1em;
 }
 
 .ViewCard {
-    border-width: 1px;
-    border-radius: 5px;
-    box-shadow: var(--color-shadow) 0 0 1rem 5px;
-    padding: 1rem;
-    text-align: start;
+  border-width: 1px;
+  border-radius: 5px;
+  box-shadow: var(--color-shadow) 0 0 1rem 5px;
+  padding: 1rem;
+  text-align: start;
 }
 
 .ViewCard h3 {
-    /* It's at the top of the card already */
-    margin-top: 0px;
+  /* It's at the top of the card already */
+  margin-top: 0px;
 }
 
 .DetailsPage {
-    max-width: 800px;
-    margin-left: auto;
-    margin-right: auto;
-    text-align: start;
+  max-width: 800px;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: start;
 }
 
 .Details {
-    text-align: left;
+  text-align: left;
 }
 
 .Details h3 {
-    margin-bottom: 4px;
+  margin-bottom: 4px;
 }
 
-
 .subtitle {
-    font-size: 0.6em;
-    color: var(--color-text-secondary);
-    margin-top: 0px;
-    font-style: italic;
+  font-size: 0.6em;
+  color: var(--color-text-secondary);
+  margin-top: 0px;
+  font-style: italic;
 }
 
 label {
-    font-weight: 600;
-    margin-right: 4px;
+  font-weight: 600;
+  margin-right: 4px;
 }
 
 a {
-    color: inherit;
-    cursor: pointer;
+  color: inherit;
+  cursor: pointer;
 }
 
 a:hover {
-    color: inherit;
-    text-decoration: underline;
+  color: inherit;
+  text-decoration: underline;
 }
 
 .separatedButtonList {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    gap: 1em;
-    justify-content: center;
-    margin-top: 1em;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  gap: 1em;
+  justify-content: center;
+  margin-top: 1em;
 }
 
 .InfoButton {
-    background-color: var(--color-background);
-    color: var(--color-button-primary);
-    padding: 0 4px;
+  background-color: var(--color-background);
+  color: var(--color-button-primary);
+  padding: 0 4px;
 }
 
 .LinkButton {
-    margin-left: 1em;
-    margin-bottom: 0.5em;
-    padding: 4px;
+  margin-left: 1em;
+  margin-bottom: 0.5em;
+  padding: 4px;
 }
 
-.compact button, .compact input, .compact label, button.compact {
-    line-height: 1.5;
-    padding: 0em 0.25em;
-    font-size: 1em;
-    font-weight: normal;
+.compact button,
+.compact input,
+.compact label,
+button.compact {
+  line-height: 1.5;
+  padding: 0em 0.25em;
+  font-size: 1em;
+  font-weight: normal;
 }
 
-div h1:first-child, div h2:first-child, div h3:first-child {
-    margin-top: 0px;
+div h1:first-child,
+div h2:first-child,
+div h3:first-child {
+  margin-top: 0px;
 }
 
 div.section {
-    margin-bottom: 1em;
+  margin-bottom: 1em;
 }
 
 dt {
-    font-weight: 600;
+  font-weight: 600;
 }
 
 .AboutPage {
-    max-width: 800px;
-    margin-left: auto;
-    margin-right: auto;
-    text-align: start;
+  max-width: 800px;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: start;
 }
 
 .AboutPage .section {
-    margin-bottom: 2em;
+  margin-bottom: 2em;
 }
 
 .AboutPage button {
-    white-space: nowrap;
+  white-space: nowrap;
 }
 
 .ViewReports {
-    text-align: start;
+  text-align: start;
 }
 
 .ViewReports summary {
-    width: 100%;
-    background-color: var(--color-button-secondary);
-    padding: 0.5em;
-    border-radius: .5em;
-    cursor: pointer;
-    text-align: left;
-    font-size: 1.2em;
-    margin-bottom: 1em;
+  width: 100%;
+  background-color: var(--color-button-secondary);
+  padding: 0.5em;
+  border-radius: 0.5em;
+  cursor: pointer;
+  text-align: left;
+  font-size: 1.2em;
+  margin-bottom: 1em;
 }
 
 @media (min-width: 0px) {
-    .CardList {
-        grid-template-columns: repeat(1, 1fr);
-    }
+  .CardList {
+    grid-template-columns: repeat(1, 1fr);
+  }
 }
 
 @media (min-width: 500px) {
-    .CardList {
-        grid-template-columns: repeat(2, 1fr);
-    }
+  .CardList {
+    grid-template-columns: repeat(2, 1fr);
+  }
 }
 
 @media (min-width: 800px) {
-    .CardList {
-        grid-template-columns: repeat(3, 1fr);
-    }
+  .CardList {
+    grid-template-columns: repeat(3, 1fr);
+  }
 }
 
 @media (min-width: 1100px) {
-    .CardList {
-        grid-template-columns: repeat(4, 1fr);
-    }
+  .CardList {
+    grid-template-columns: repeat(4, 1fr);
+  }
 }
