--- a/src/generic/styles.css
+++ b/src/generic/styles.css
@@ -1,6 +1,7 @@
 .seeMore {
-  margin: 0px;
-  padding: 0.25em 0.5em;
+  margin: -0.25em 0;
+  padding: 0.25em 0.25em;
+  /* padding: 0; */
   font-weight: normal;
 }
 
