--- a/src/views/styles.css
+++ b/src/views/styles.css
@@ -112,3 +112,17 @@ div.section {
   flex-wrap: wrap;
   justify-content: center;
 }
+
+.hoverableText, .selector .hoverableText {
+  background-color: transparent;
+  color: var(--color-button-primary);
+  cursor: pointer;
+  border-radius: 0.5em;
+  padding: 0 0.25em;
+  margin: 0 -.25em;
+}
+
+.hoverableText:hover, .selector .hoverableText:hover {
+  color: var(--color-button-primary);
+  background-color: color-mix(in srgb, var(--color-button-primary), var(--color-background) 90%);
+}
