--- a/src/app/index.css
+++ b/src/app/index.css
@@ -1,20 +1,34 @@
 #root {
   display: flex;
   flex-direction: column;
-  min-height: 100vh; /* Guarantee it always spans the viewport */
+  min-height: 100vh;
+  /* Guarantee it always spans the viewport */
+}
+
+.object-map-circle {
+  transition: fill 0.25s, stroke 0.25s;
+  mix-blend-mode: normal;
+  /* mix-blend-mode: hard-light; */
+  /* stroke: hsl(210, 100%, 60%); */
 }
 
 :root {
-  --color-text: #04355c; /* Primary text color */
+  --color-text: #04355c;
+  /* Primary text color */
   --color-text-secondary: grey;
   --color-text-highlight: #ffffa1;
-  --color-background: #ffffff; /* App/page background */
+  --color-background: #ffffff;
+  /* App/page background */
 
-  --color-button-primary: #007bff; /* Bright, clickable primary action */
-  --color-button-secondary: #f0f0f0; /* Inactive selection options, secondary buttons */
-  --color-button-hover: #3399ff; /* selector hovered over or active*/
+  --color-button-primary: #007bff;
+  /* Bright, clickable primary action */
+  --color-button-secondary: #f0f0f0;
+  /* Inactive selection options, secondary buttons */
+  --color-button-hover: #3399ff;
+  /* selector hovered over or active*/
 
-  --color-shadow: rgba(0, 0, 0, 0.1); /* Subtle shadow for depth */
+  --color-shadow: rgba(0, 0, 0, 0.1);
+  /* Subtle shadow for depth */
 
   --color-text-red: #df7e7c;
   --color-text-orange: #fb8c00;
@@ -61,9 +75,11 @@ h1 {
   font-size: 3.2em;
   line-height: 1.1;
 }
+
 h3 {
   font-size: 1.4rem;
 }
+
 h4 {
   margin-top: 8px;
   margin-bottom: 4px;
