Visuals: Add a page brightness toggle & try fixing the Logo component (#296)
Added a new selector that allows the user to manually specify the
brightness of the page. The setting is saved to local storage. Separated
the logo files into specific ones for light & dark. Also did a few fixes
to components in the map view.

|Follow Device|Dark|Light|
|--|--|--|
|<img width="319" height="705" alt="Screenshot 2025-11-09 at 14 49 32"
src="https://github.com/user-attachments/assets/52c6ad21-6191-41ba-80c3-75d93a5bd9c8"
/>|<img width="326" height="695" alt="Screenshot 2025-11-09 at 14 49 40"
src="https://github.com/user-attachments/assets/34eed7a4-a7b3-46df-8bf9-3cd550c0a143"
/>|<img width="321" height="706" alt="Screenshot 2025-11-09 at 14 49 50"
src="https://github.com/user-attachments/assets/b74819aa-fdb9-4c8e-84da-850ae6fb93eb"
/>

---------

Co-authored-by: conradarcturus <1616639+conradarcturus@users.noreply.github.com>

--- a/src/app/index.css
+++ b/src/app/index.css
@@ -5,16 +5,8 @@
   /* Guarantee it always spans the viewport */
 }
 
-.object-map-circle {
-  transition:
-    fill 0.25s,
-    stroke 0.25s;
-  mix-blend-mode: normal;
-  /* mix-blend-mode: hard-light; */
-  /* stroke: hsl(210, 100%, 60%); */
-}
-
-:root {
+:root,
+:root.light {
   --color-text: #04355c;
   /* Primary text color */
   --color-text-secondary: grey;
@@ -166,4 +158,25 @@ button:hover .highlighted {
     --color-text-blue: #42a5f5;
     --color-text-purple: #ce93d8;
   }
+}
+
+/* Keep this in sync with the above @media query */
+:root.dark {
+  --color-text: #f1f1f1;
+  --color-text-secondary: #aaaaaa;
+  --color-background: #121212;
+  --color-text-highlight: #575741;
+
+  --color-button-primary: #3399ff;
+  --color-button-secondary: #444;
+  --color-button-hover: #0061c3;
+
+  --color-shadow: rgba(255, 255, 255, 0.5);
+
+  --color-text-red: #ff6e6e;
+  --color-text-orange: #ffb74d;
+  --color-text-yellow: #ffeb3b;
+  --color-text-green: #66bb6a;
+  --color-text-blue: #42a5f5;
+  --color-text-purple: #ce93d8;
 }
