Table: Various UX improvements (#324)
It all started with just adding the ability to add census files with
percents rather than counts. Then I added better count & percent
displays to the table view and it spiralled...

Changes:
* Censuses can use quantity=percent to specific that the input data is a
percent not a raw count
  * Did this to add Cameroon census data
* Adds 2 new helper classes to handle displaying numeric values:
`CountOfPeople` and `DecimalNumber`.
* The `CountOfPeople` rounds values less than 10 to just show ">=1" to
indicate its a very small value without giving the wrong impression that
it is precision 1, etc.
  * The `DecimalNumber` similarly clamps very small decimals.
* They both allow falsy inputs as well to give a standard, elegant
display (that sounded like a very genai way to word it, but trust me, I
am usually a human).
* Table value types split "numeric" into 4 types: Date, Count (same
behavior), Population, and Decimal to use the 2 helper classes.
* In table and elsewhere, lots of `number.toLocaleString()` functions
converted to use the new number helpers.
* Table styling
* Enabled it to scroll horizontally (important when there are many
values)
* Fixed the "white" background in the header, now follows the BG color
(important for dark mode)
  * Column widths adjusted a bit -- I'm not yet sold on it
  * Column Selector now has Show All and Show None convenience functions
* While testing, discovered some bugs with circular language parentage
and mocking the storage. Updated tests and data to mitigate that.

|What|Before|After|
|--|--|--|
|Table styles|<img width="718" height="637" alt="Screenshot 2025-11-28
at 18 34 23"
src="https://github.com/user-attachments/assets/e60c77de-14d2-42b7-8718-131edc52b4d8"
/>|<img width="715" height="573" alt="Screenshot 2025-11-28 at 18 34 32"
src="https://github.com/user-attachments/assets/1dd8e85d-dc27-4732-b6ce-8ecae9d3b81c"
/>
|Cameroon Census data|n/a|<img width="857" height="608" alt="Screenshot
2025-

--- a/src/pages/dataviews/styles.css
+++ b/src/pages/dataviews/styles.css
@@ -65,3 +65,7 @@ div h3:first-child {
   color: var(--color-button-primary);
   background-color: color-mix(in srgb, var(--color-button-primary), var(--color-background) 90%);
 }
+
+tbody tr:hover {
+  background-color: color-mix(in srgb, var(--color-button-primary), var(--color-background) 90%);
+}
