Fix lingering dropdown issues

--- a/src/pages/dataviews/styles.css
+++ b/src/pages/dataviews/styles.css
@@ -39,7 +39,7 @@ div h3:first-child {
   margin-top: 0px;
 }
 
-.collapsible-report > summary {
+.collapsible-report>summary {
   width: 100%;
   background-color: var(--color-button-secondary);
   padding: 0.5em;
@@ -58,6 +58,10 @@ div h3:first-child {
   border-radius: 0.5em;
   padding: 0 0.25em;
   margin: 0 -0.25em;
+}
+
+.selector .secondaryHoverableText {
+  color: var(--color-text-secondary);
 }
 
 .hoverableText:hover,
